--- a/components.html
+++ b/components.html
@@ -52,7 +52,7 @@
         </div>
       </nav></header>
  
-      <div class="container-fluid">
+      <div class="container">
         <div class="row text-center pt-5 pe-5 ps-5 pb-3 text-light">
           <div class="col-md">
             <p class="display-3"><i class="fa-solid fa-sliders"></i>&ensp; Bootstrap components</p>
@@ -119,7 +119,7 @@
         
       </div>
 
-      <div class="row mb-5 mt-5 ms-2 justify-content-evenly">
+      <div class="row mb-3 mt-5 ms-2 justify-content-evenly">
         <div class="col-md-3 mb-5">
           <div class="card text-center" style="height: 450px;">
             <div class="card-img-top">
@@ -167,6 +167,12 @@
         </div>
         
       </div>
+
+        <div class="row text-center text-light justify-content-center pb-5">
+          <div class="col-md-6">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus nam odio, numquam modi nulla quod explicabo, veritatis veniam inventore qui eligendi, dolorum commodi rem id nobis delectus quis voluptate recusandae.</p>
+          </div>
+        </div>
 
       </div>
   
