--- a/components.html
+++ b/components.html
@@ -168,7 +168,7 @@
         
       </div>
 
-        <div class="row text-center text-light justify-content-center pb-5">
+        <div class="row text-center text-light justify-content-center pt-5 ps-5 pe-5 pb-2">
           <div class="col-md-6">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus nam odio, numquam modi nulla quod explicabo, veritatis veniam inventore qui eligendi, dolorum commodi rem id nobis delectus quis voluptate recusandae.</p>
           </div>
