--- a/components.html
+++ b/components.html
@@ -71,7 +71,7 @@
         
       <div class="row mb-5 mt-5 ms-2 justify-content-evenly">
         <div class="col-md-3 mb-5">
-          <div class="card text-center" style="height: 450px;">
+          <div class="card text-center bg-dark text-light shadow" style="height: 450px;">
             <div class="card-img-top">
               <img src="assets/typography_word_by_wellgraphic-d2ql9m5.png.crdownload" alt="" class="img-fluid">
             </div>
@@ -87,7 +87,7 @@
           </div>
         </div>
         <div class="col-md-3 mb-5">
-          <div class="card text-center" style="height: 450px;">
+          <div class="card text-center bg-dark text-light shadow" style="height: 450px;">
             <div class="card-img-top">
               <img src="assets/Bootstrap-button.png.crdownload" alt="" class="img-fluid">
             </div>
@@ -102,7 +102,7 @@
           </div>
         </div>
         <div class="col-md-3 mb-5">
-          <div class="card text-center" style="height: 450px;">
+          <div class="card text-center bg-dark text-light shadow" style="height: 450px;">
             <div class="card-img-top">
               <img src="assets/login-form-12-1.jpg" alt="" class="img-fluid">
             </div>
@@ -121,7 +121,7 @@
 
       <div class="row mb-3 mt-5 ms-2 justify-content-evenly">
         <div class="col-md-3 mb-5">
-          <div class="card text-center" style="height: 450px;">
+          <div class="card text-center bg-dark text-light shadow" style="height: 450px;">
             <div class="card-img-top">
               <img src="assets/navbar.jpeg" alt="" class="img-fluid" >
             </div>
@@ -136,7 +136,7 @@
           </div>
         </div>
         <div class="col-md-3 mb-5">
-          <div class="card text-center" style="height: 450px;">
+          <div class="card text-center bg-dark text-light shadow" style="height: 450px;">
             <div class="card-img-top">
               <img src="assets/alerts.jpeg" alt="" class="img-fluid">
             </div>
@@ -151,7 +151,7 @@
           </div>
         </div>
         <div class="col-md-3 mb-5">
-          <div class="card text-center" style="height: 450px;">
+          <div class="card text-center bg-dark text-light shadow" style="height: 450px;">
             <div class="card-img-top mb-5">
               <img src="assets/Bootstrap-Pagination-Templates.jpg" alt="" class="img-fluid">
             </div>
