--- a/Docs.html
+++ b/Docs.html
@@ -92,19 +92,37 @@
             projects.
           </p>
           <div
-            class="p-4 mb-5 mt-5"
+            class="p-4 mb-5 mt-5 d-flex"
             style="width: 20rem; border: 2px solid grey; border-radius: 20px"
           >
-            $ npm install bootstrap@5.3.2&ensp;
-            <i class="fa-regular ms-3 fa-clipboard"></i>
+          <input
+          type="text"
+          class="text-center form-control text-light"
+          id="url"
+          value="$ npm install bootstrap@5.3.2"
+          disabled
+          style="background: none;border: none;"
+        /><button onclick="copy()" type="" class=" text-light" style="border:none; background: none;">
+          <i class="fa-regular fa-clipboard"></i>
+        </button>
+            <!-- $ npm install bootstrap@5.3.2&ensp;
+            <i class="fa-regular ms-3 fa-clipboard"></i> -->
           </div>
-
+          
           <div
-            class="p-4"
+            class="p-4 d-flex"
             style="width: 20rem; border: 2px solid grey; border-radius: 20px"
           >
-            $ gem install bootstrap -v 5.3.2&ensp;
-            <i class="fa-regular ms-3 fa-clipboard"></i>
+          <input
+          type="text"
+          class="text-center form-control text-light"
+          id="url"
+          value="$ gem install bootstrap -v 5.3.2"
+          disabled
+          style="background: none;border: none;"
+        /><button onclick="copy()" type="" class=" text-light" style="border:none; background: none;">
+          <i class="fa-regular fa-clipboard"></i>
+        </button>
           </div>
         </div>
 
@@ -175,5 +193,6 @@
       src="https://kit.fontawesome.com/7029a1741b.js"
       crossorigin="anonymous"
     ></script>
+    <script src="script.js"></script>
   </body>
 </html>
